k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krampoline
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: krampoline
